--- a/css/style.css
+++ b/css/style.css
@@ -1399,11 +1399,11 @@ input[type=number]::-webkit-outer-spin-button {
   }
 
   70% {
-    transform: translateX(-50%) translateY(-35%px);
+    transform: translateX(-50%) translateY(-35%);
   }
 
   90% {
-    transform: translateX(-50%) translateY(-55%px);
+    transform: translateX(-50%) translateY(-55%);
   }
 
   100% {
@@ -1438,12 +1438,12 @@ input[type=number]::-webkit-outer-spin-button {
     transform: translateX(-50%) translateY(-50%);
   }
 
-  70% {
-    transform: translateX(-50%) translateY(-60%px);
+  10% {
+    transform: translateX(-50%) translateY(-60%);
   }
 
-  90% {
-    transform: translateX(-50%) translateY(-80%px);
+  50% {
+    transform: translateX(-50%) translateY(-80%);
   }
 
   100% {
